# ai-account-prioritization

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  prd_manifest.yaml  turbo.json
.github/workflows/: ci.yml  deploy.yml  evals.yml  security.yml
apps/agent-runtime/: package.json  tsconfig.json
apps/api-python/: README.md  package.json  pyproject.toml
apps/api-python/src/: main.py
apps/api-python/src/data_quality/: __init__.py  service.py
apps/api-python/src/observability/: __init__.py  config.py  langfuse_client.py  sentry.py
apps/api-python/src/schemas/: __init__.py  loader.py
apps/api-python/src/scoring/: __init__.py  service.py
apps/api-python/tests/: test_observability.py
apps/web/: middleware.ts  next.config.ts  package.json  tsconfig.json
apps/web/app/: page.tsx  (+2 more)
docs/: ARCHITECTURE.md  CONTEXT.md  PRD.md
infra/: README.md  compose.override.yaml  compose.yaml
infra/docker/: Dockerfile.agent-runtime  Dockerfile.api-python  Dockerfile.web  docker-entrypoint.sh
scripts/: check-no-prisma.sh  generate-supabase-types.sh  refactor-and-push.sh  scan-secrets.sh  verify-observability.sh  verify-production-contract.sh  verify-production.sh  verify-security.sh
supabase/: config.toml  seed.sql
supabase/functions/: README.md
supabase/migrations/: 0001_init_core_tables.sql  0002_auth_rbac_profiles.sql  0003_accounts_contacts_opportunities.sql  0004_recommendations_audit_evidence.sql  0005_rls_policies.sql  0006_observability_events.sql
verification/: verification_report.json  verification_summary.md
(+61 files in other folders)
