[project]
name = "ai-account-prioritization-api"
version = "1.0.0"
description = "Isolated FastAPI support service for the AI Account Prioritization Agent."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
# Optional observability backends (activated by env; service runs without them).
# Langfuse pinned to the v2 major: record_event() uses the v2 `trace()` API
# (v3+ replaced it, which would silently no-op emission).
observability = ["sentry-sdk[fastapi]>=2.0", "langfuse>=2.0,<3.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
pythonpath = ["src"]
